# direct-nlopt-rs

./: Cargo.toml  DIFFERENCES.md  LICENSE  PERFORMANCE.md  README.md  build.rs  cbindgen.toml  package-for-github.sh  progress.txt  run_performance_report.sh
analysis/: cdirect_analysis.md  dirserial_analysis.md  dirsubrout_analysis.md  gablonsky_analysis.md  hybrid_analysis.md
benches/: benchmarks.rs
benchmarks/: nlopt_bench.c  run_benchmark_comparison.sh
examples/: bench_baseline.rs  parallel_stress_test.rs  performance_report.rs
include/: direct_nlopt.h
nlopt-shim/: nlopt.h  nlopt_config.h  nlopt_trace_shim.c  nlopt_util_shim.c
src/: cdirect.rs  direct.rs  error.rs  ffi.rs  lib.rs  storage.rs  trace.rs  types.rs
tests/: nlopt_ffi.rs  run_all_comparisons.sh  test_1d_edge_cases.rs  test_ackley_comparison.rs  test_asymmetric_extreme_bounds.rs  test_benchmark_comparison.rs  test_c_ffi.c  test_cdirect_hull_compare.rs  test_cdirect_parallel.rs  test_cdirect_vs_gablonsky.rs  test_constraints.rs  test_dirchoose_compare.rs  test_divide_compare.rs  test_ffi.rs  test_fglobal_termination.rs  test_flat_degenerate_cases.rs  test_force_stop_comparison.rs  test_get_longest_dims_compare.rs  test_golden_regression.rs  test_hidden_constraints.rs  test_highdim_comparison.rs  test_infeasible_trace.rs  test_level_compare.rs  test_linked_list_compare.rs  test_maxfeval_termination.rs  test_nlopt_c.c  test_parallel_verification.rs  test_rastrigin_comparison.rs  test_rosenbrock_comparison.rs  test_scaling_compare.rs  test_sphere_gablonsky_comparison.rs  test_thirds_levels_compare.rs  (+4 more)
(+44 files in other folders)
