[package]
name = "direct-nlopt-rs"
version = "0.1.0"
edition = "2021"
authors = ["DIRECT-NLOPT Rust Team"]
description = "A faithful Rust-native implementation of the NLOPT DIRECT/DIRECT-L global optimization algorithms with rayon parallelization"
license = "MIT OR LGPL-2.1-or-later"
keywords = ["optimization", "global-optimization", "numerical", "mathematics", "direct"]
categories = ["mathematics", "science", "algorithms"]

[lib]
name = "direct_nlopt"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
# Parallel processing
rayon = "1.10"
parking_lot = "0.12"

# Utilities
thiserror = "2.0"
log = "0.4"
ordered-float = "4.2"

# C FFI
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"

[[bench]]
name = "benchmarks"
harness = false

[build-dependencies]
cbindgen = "0.28"
cc = { version = "1.0", optional = true }

[features]
default = []
parallel = []
ffi = []
nlopt-compare = ["cc"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
